# Copyright 2017 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [ "util_win.mojom" ]

  public_deps = [
    "//mojo/public/mojom/base",
  ]

  cpp_typemaps = [
    {
      types = [
        {
          mojom = "util_win.mojom.FileFilterSpec"
          cpp = "::ui::FileFilterSpec"
        },
        {
          mojom = "util_win.mojom.SelectFileDialogType"
          cpp = "::ui::SelectFileDialog::Type"
        },
      ]
      traits_headers = [ "util_win_mojom_traits.h" ]
      traits_sources = [ "util_win_mojom_traits.cc" ]
      traits_public_deps = [
        "//base",
        "//ui/shell_dialogs",
      ]
    },
  ]
}